--- a/PianoNote/Asset/Base.lproj/Main.storyboard
+++ b/PianoNote/Asset/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Recycle Bin View Controller-->
         <scene sceneID="wpk-6b-9qz">
             <objects>
-                <viewController storyboardIdentifier="RecycleBinViewController" automaticallyAdjustsScrollViewInsets="NO" id="6Eh-mY-w51" customClass="RecycleBinViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RecycleBinViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6Eh-mY-w51" customClass="RecycleBinViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="StN-RL-jPJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -160,19 +160,19 @@
         <!--Interact View Controller-->
         <scene sceneID="jvA-b3-6RU">
             <objects>
-                <viewController storyboardIdentifier="InteractViewController" automaticallyAdjustsScrollViewInsets="NO" id="ler-eE-Fax" customClass="InteractViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InteractViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ler-eE-Fax" customClass="InteractViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EwS-YU-uqh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WD2-jM-xBX">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WD2-jM-xBX">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a33-Mk-apw">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a33-Mk-apw">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.23529411764705882" green="0.34901960784313724" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -181,7 +181,7 @@
                                     <action selector="actionWithLogin:" destination="ler-eE-Fax" eventType="touchUpInside" id="qrN-KN-OfC"/>
                                 </connections>
                             </button>
-                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="93a-wS-TsB">
+                            <tableView clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="93a-wS-TsB">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -289,7 +289,7 @@
                         <outlet property="facebookButton" destination="a33-Mk-apw" id="FMf-8W-vG7"/>
                         <outlet property="facebookLabel" destination="WD2-jM-xBX" id="3AP-QM-Gwf"/>
                         <outlet property="listView" destination="93a-wS-TsB" id="XXa-V3-PQl"/>
-                        <segue destination="crB-UG-vlN" kind="show" id="LQr-fN-bfL"/>
+                        <segue destination="crB-UG-vlN" kind="show" identifier="InteractDetailViewController" id="LQr-fN-bfL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sXp-a2-I0Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -299,12 +299,12 @@
         <!--Interact Detail View Controller-->
         <scene sceneID="og0-Oe-EDo">
             <objects>
-                <viewController storyboardIdentifier="InteractDetailViewController" id="crB-UG-vlN" customClass="InteractDetailViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InteractDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="crB-UG-vlN" customClass="InteractDetailViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rbk-jW-d63">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="y4X-Lg-YEO">
+                            <tableView clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="y4X-Lg-YEO">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -393,7 +393,7 @@
         <!--Splash View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="SplashViewController" automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="SplashViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SplashViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="SplashViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -402,7 +402,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="FsB-ud-Shp"/>
                     <connections>
-                        <segue destination="hXS-0I-ej6" kind="show" id="bu8-Wh-vJ9"/>
+                        <segue destination="hXS-0I-ej6" kind="show" identifier="MainListViewController" id="bu8-Wh-vJ9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -412,12 +412,12 @@
         <!--Clear Navigation Controller-->
         <scene sceneID="eTi-3u-F2c">
             <objects>
-                <navigationController storyboardIdentifier="DRClearNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="dG3-Y9-KLd" customClass="DRClearNavigationController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="DRClearNavigationController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="dG3-Y9-KLd" customClass="DRClearNavigationController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Idn-sc-4Vf">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GgU-8h-P4O">
                         <autoresizingMask key="autoresizingMask"/>
@@ -434,7 +434,7 @@
         <!--Main List View Controller-->
         <scene sceneID="Nt2-w6-HZL">
             <objects>
-                <viewController storyboardIdentifier="MainListViewController" automaticallyAdjustsScrollViewInsets="NO" id="hXS-0I-ej6" customClass="MainListViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainListViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hXS-0I-ej6" customClass="MainListViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="W1W-J8-sqT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -737,8 +737,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="listView" destination="b2K-yu-VO0" id="liz-BV-O40"/>
-                        <segue destination="6Eh-mY-w51" kind="show" id="XdT-go-sYI"/>
-                        <segue destination="ler-eE-Fax" kind="show" id="e2b-Nm-HUz"/>
+                        <segue destination="6Eh-mY-w51" kind="show" identifier="RecycleBinViewController" id="XdT-go-sYI"/>
+                        <segue destination="ler-eE-Fax" kind="show" identifier="InteractViewController" id="e2b-Nm-HUz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ubu-f0-L8q" userLabel="First Responder" sceneMemberID="firstResponder"/>
